crates/cuda-macros/tests/compile_fail/kernel_legacy_const_instantiation.rs
// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

use cuda_macros::kernel;

#[kernel(u32)]
fn invalid<const N: usize>() {}

fn main() {}
